[gd_scene load_steps=4 format=2]

[ext_resource path="res://entity/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://entity/player/lose.wav" type="AudioStream" id=3]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" type="Node2D" parent="."]
pause_mode = 1

[node name="Player" parent="Level" instance=ExtResource( 1 )]
position = Vector2( 8, 16 )

[node name="LoseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0

[connection signal="died" from="Level/Player" to="." method="_on_Player_died"]
[connection signal="enter_hyperlink" from="Level/Player" to="." method="_on_Player_enter_hyperlink"]
